feat(autocomplete): add category-based filtering with multilingual support
- Create autocomplete_items table with type enum (DISH, MAIN_INGREDIENT,
  SECONDARY_INGREDIENT, SEASONING)
- Add 105 items with 7-language translations (en, ko, ja, fr, zh, es, it)
- Update backend to filter by type and cache per locale/type in Redis
- Update frontend to pass type parameter from hook_section and ingredient_section

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>